# mujoco-playground

./: .gitignore  CMakeLists.txt  README.md  flake.nix
src/: CMakeLists.txt  test_go1_terrain.cc  testspeed.cc
src/data/: go1_recorded_control.cc  go1_recorded_control.h
